Wed Jul 23 11:34:27 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* set.c, gnubg.c, gtkgame.c: give a sensible error message if language
	change fails, i.e. locale unsupported.
	* gtkwindows.c: don't run gtk_widget_present(parent) if parent isn't
	realized.

Sat Jul 19 23:54:09 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, eval.c, osr.c: replace 6, 15 with nChequers and nPoints
	in a couple of places

Fri Jul 18 18:07:38 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, credits.sh, gnubg.c, gtkgame.c, gtkgame.h,
	relational.c, show.c: Changes to allow GTKTextWindow to be called from
	within a dialog. Make license, etc. be printed as text rather than
	gtk_lists. Make the intro text conform with the GPL3 suggestion. Minor
	translational changes.

Sun Jul 13 21:07:17 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, eval.c, export.c, file.c, gnubg.c, gnubgmodule.c,
	gtkprefs.c, html.c, import.c, latex.c, makebearoff.c, makehyper.c,
	makeweights.c, relational.c, rollout.c, sgf.c, text.c,
	board3d/matrix.c, board3d/misc3d.c: replace fopen with g_fopen to
	avoid problems with special characters in filenames

Sat Jul 12 09:10:43 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* gnubg.c, renderprefs.c, renderprefs.h: fix places where g_strdup
	wasn't followed by g_free

Fri Jul 11 22:54:46 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* bearoff.c, dice.c, eval.c, format.c, gnubg.c, show.c, renderprefs.c:
	fix some printf format related compiler warnings

Fri Jul 11 22:48:59 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: fix type of board in log_game_start

Fri Jul 11 11:23:02 CEST 2008 Christian Anthon <anthon@kiku.dk>

	* rollout.c: move log_name out of globals

Mon Jul  7 22:42:20 CEST 2008 Petr Kadlec <mormegil@centrum.cz>

	* eval.c, gnubg.c, gtkgame.c, matchequity.c, render.c, renderprefs.c
	show.c, sound.c: minor fixes for MSVC compiler happinnes (mainly adding
	"float" suffix to decimal number literals etc.)
