@@ -391,7 +391,7 @@ GTKShowRace ( TanBoard anBoard ) {
   /* show dialog */
 
   PerformOSR ( NULL, prw );
-  gtk_notebook_set_page ( GTK_NOTEBOOK ( pwNotebook ), 0 );
+  gtk_notebook_set_current_page ( GTK_NOTEBOOK ( pwNotebook ), 0 );
 
   GTKRunDialog(pwDialog);
 }
